# skills

./: .cursorrules  .env-example  .env.bak  .env.bak2  .gitignore  .oxfmtrc.json  .playwright-env  .test-env  AGENTS.md  ANIMATION_FILL_MODE_SOLUTION.md  CLAUDE.md  CLEANUP_CACHE.md  COORDINATE-API.md  Dockerfile  Dockerfile.gpu-probe.prod  Dockerfile.gpu-render-test.prod  Dockerfile.jit-transcoding.prod  Dockerfile.maintenance.prod  Dockerfile.migration-job.prod  Dockerfile.render.dev  Dockerfile.runner  Dockerfile.scheduler-go.prod  Dockerfile.transcribe-ctl.prod  Dockerfile.web.prod  Dockerfile.worker-process-html-finalizer.prod  Dockerfile.worker-process-html-initializer.prod  Dockerfile.worker-process-isobmff.prod  Dockerfile.worker-render-finalizer.prod  Dockerfile.worker-render-fragment.prod  Dockerfile.worker-render-initializer.prod  LICENSE-FULL.md  LICENSE.md  MIGRATION-TO-SHARED-INFRASTRUCTURE.md  OFFSCREEN_IMPLEMENTATION_SUMMARY.md  QUICKSTART-SHARED-INFRASTRUCTURE.md  README-SHARED-INFRASTRUCTURE.md  README.md  SHARED-INFRASTRUCTURE-SUMMARY.md  biome.json  concat-test.sh  (+41 more)
.ag/: agent.db
.archive/: EditorWrapper.client.tsx  caption-files.test.ts  delete_caption_files.ts  renders.$id.$segment.tsx  renders_.tsx
.claude/: settings.json
.claude-plugin/: marketplace.json
.cursor/: worktrees.json
.cursor-worktrees/: README.md  SETUP.md
.devcontainer/: CHECKLIST.md  Dockerfile  README.md  devcontainer.json  post-create.sh
.rules/: component-test-coverage.md  monorepo-setup-git.md  monorepo-setup-scripts.md  monorepo-setup-worktrees.md  monorepo-setup.md  project.md
@types/: codem-isoboxer.d.ts  custom.d.ts  hasura-events.d.ts  mp4box.d.ts
blog/: 1-beyond-vibes-systematic-llm-engineering.md  2-llm-enhanced-test-driven-development.md  3-the-refactoring-decision-tree-framework.md  README.md
brand-video-generator/: SKILL.md
composition/: SKILL.md
deploy/: Pulumi.telecine-dot-dev.yaml.example  package-lock.json  package.json  tsconfig.json  worker-resources.config.ts
editframe-api/: SKILL.md
editframe-brand-video-generator/: README.md  SKILL.md
editframe-cli/: SKILL.md
editframe-composition/: SKILL.md
editframe-create/: SKILL.md
editframe-editor-gui/: SKILL.md
editframe-motion-design/: SKILL.md
editframe-vite-plugin/: SKILL.md
editframe-webhooks/: SKILL.md
editor-gui/: SKILL.md
electron-build/: build-electron.sh  build-on-gce.sh
elements/: .gitignore  .npmignore  BETA_RELEASE_PLAN.md  Dockerfile.ci-runner  FOREIGNOBJECT_SLOWDOWN_ANALYSIS.md  LICENSE-FULL.md  LICENSE.md  LLM_PROFILING_GUIDE.md  PROFILING.md  (+34 more)
lib/transcode/: CMakeLists.txt  copy-build-artifacts
lib/transcode/examples/: local-file-demo.ts
lib/transcode/scripts/: README.md  generate-test-pattern.ts  install-ffmpeg-runtime-alpine.sh  test-ffmpeg.ts  test-quick.ts
lib/transcode/src/: ConstructorReferences.h  FFmpegUtils.cpp  FFmpegUtils.h  GetFFMpegConfiguration.cpp  GetFFMpegVersion.cpp  GetKeyframes.h  ValidateRemoteSource.cpp  binding.cpp  logging.cpp  logging.h  module.cpp  moovScanner.test.ts  moovScanner.ts  playback.cpp  playback.h  playback.ts
lib/transcode/src/async/: DecodeAsyncWorker.h  FetchByteRangeAsyncWorker.h  InitializeAsyncWorker.cpp  LocalFileByteRangeFetcher.ts
lib/transcode/src/audio/: AudioTranscoder.ts
lib/transcode/src/jit/: audio-transcoder.ts  calculateSegmentDurations.ts  calculations.ts  manifest-generator.ts  segment-utils.ts  transcoder-types.ts  transcoding-service.test.ts  transcoding-service.ts  video-transcoder.test.ts  video-transcoder.ts
lib/transcode/src/jit/test/: basic.test.ts  debug.test.ts
lib/transcode/src/pipeline/: Decoder.cpp  Decoder.ts  Encoder.h  Encoder.ts  EncoderBinding.cpp  Filter.cpp  FilterBinding.cpp  Muxer.cpp  Muxer.h  MuxerBinding.cpp  Packet.h  PacketBinding.cpp  PngExporterBinding.cpp  VideoSource.test.ts  VideoSource.ts
lib/transcode/tests/: TestHttpServer.ts
(+5704 files in other folders)
